# epic-cache-router-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  diffusion_router_engineering_spec.md  epic_case_study.md  eval_card.md  routing_states.md  safety_gates.md  sample_eval_report.md
examples/: demo_generation_plan.py  demo_router.py
fixtures/: prior_panels.json  requests.json
src/epic_cache_router_lab/: __init__.py  continuity_metrics.py  cost_model.py  evals.py  execution_router.py  models.py  report.py  router.py
tests/: test_continuity_metrics.py  test_cost_model.py  test_evals.py  test_execution_router.py  test_report.py  test_router.py
