[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epic-cache-router-lab"
version = "0.3.0"
description = "Sanitized reference harness for AI visual cache routing and continuity safety"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Coby Litvinsky"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Example scripts bootstrap sys.path before importing the package.
"examples/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

